z-index fixes

--- a/css/garage.css
+++ b/css/garage.css
@@ -35,7 +35,7 @@
 
 .biometric-terminal {
     position: absolute;
-    z-index: 100001;
+    z-index: 1000;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
